# btc_etf_effect-

./: .env.example  .gitignore  CAVEATS.md  LICENSE  README.md  pyproject.toml
docs/: Table 7 Robustness.docx  Table_7_Robustness.md  main_paper.md
docs/learning/00_overview/: 01_math_story.md  02_toolkit_and_choices.md  03_critical_reading.md
docs/tables/: table7.md  table7_analysis.md  table7_qmle.md  table7_qmle_analysis.md
scripts/: build_daily_panel.py  fetch_binance_klines.py  fetch_yfinance_daily.py  generate_table7_docx.py  import_recovered_artifacts.py  run_table7.py  run_table7_qmle.py  run_table7_recovered.py  smoke_test_sample.py
src/btc_eth_research/: __init__.py  binance.py  config.py  recovered.py  spillover.py  table7.py  varx.py  volatility.py
src/btc_eth_research/bekk/: __init__.py  data.py  diagnostics.py  fit.py  grid_search.py  likelihood.py  optimize.py  parameterization.py  sandwich.py
tests/: test_bekk_endtoend.py  test_bekk_likelihood.py  test_bekk_parameterization.py  test_binance_parser.py  test_table7.py  test_volatility.py
